--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nklayman/vue-cli-plugin-capacitor",
+  "name": "vue-cli-plugin-capacitor",
   "version": "0.4.0",
   "description": "A Vue CLI 3 Plugin for Capacitor",
   "main": "index.js",
